# STXit

./: CHANGELOG.md  Dockerfile  LICENSE  README.md  README_GITHUB_PUSH.md  environment.yml  install.sh  pyproject.toml  requirements.txt  setup.py  stxit.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
ci/: dependency_check.py  file_check.py  syntax_check.py  yaml_check.py
config/: Stx_insertion_sites.fasta  backbone_reference.tsv  comprehensive_stx_typing.fasta  custom_phage_categories.tsv  known_insertion_sites.tsv  stx_citations.tsv  stx_references.tsv  subject_metadata.tsv
customcategories/: The logic is to take the Phastest JSON file and categorize the CDSs based on functional categories and subcategories using the color key spreadsheet.docx  final_color_key.xlsx  processing_JSON_files_using_the_Excel_based_color_key_python_script.txt
databases/: stx_references.fasta  stx_references.tsv
docs/: MERGE_NOTES.md  output_columns.md
examples/: example_backbone_mode.sh  example_db_update.sh  example_genome_mode.sh  run_ec4115_auto.sh  run_ec4115_manual.sh
stxit/: __init__.py  cli.py  io_utils.py  phage_insertion.py  phage_prediction.py  phastest_client.py  plotting.py  reporting.py  stx_db.py  stx_typing.py  trna_runner.py  trna_scan.py  variant_analysis.py
tests/: README.md  test_stxit.py
